--- a/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
+++ b/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
@@ -3,7 +3,7 @@
 <div class="tabs">
     <a href="#/etusivu" class="tab"><span>{{ t('common.etusivu') || 'Valintaryhmät ja hakukohteet' }}</span></a>
     <a href="#/laskentakaava" class="tab"><span>{{ t('common.laskentakaava') || 'Laskentakaavat' }}</span></a>
-    <a ng-disabled="true" auth="crudOph" href="#/import" class="tab float-right current"><span>{{ t('common.import') || 'Yhteisvalinnan hallinta' }}</span></a>
+    <a ng-disabled="true" auth href="#/import" class="tab float-right current"><span>{{ t('common.import') || 'Yhteisvalinnan hallinta' }}</span></a>
 </div>
 <div class="tabsheets">
 
