VT-1078: syntaksivirheet korjattu

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -25,9 +25,7 @@
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="valintaperusteet-resources.js"></script>
     <script type="text/javascript" src="routes.js"></script>
-    <script type="text/javascript" src="../common/js/Authorization/User/userModel.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioUtility.js"></script>
-    <script type="text/javascript" src="../common/js/Authorization/User/userAccessLevels.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma.js"></script>
     <script type="text/javascript" src="valintaryhma/valintakoekoodit.js"></script>
@@ -47,9 +45,7 @@
     <script type="text/javascript" src="../common/js/directives.js"></script>
     <script type="text/javascript" src="../common/js/modal.js"></script>
     <script type="text/javascript" src="../common/js/filters.js"></script>
-    <script type="text/javascript" src="../common/js/Authorization/authorization.js"></script>
     <script type="text/javascript" src="../common/js/ng-breadcrumbs.js"></script>
-    <script type="text/javascript" src="../common/js/rootctrl.js"></script>
     <script type="text/javascript" src="../common/js/localisation.js"></script>
     <script type="text/javascript" src="../common/js/valintaryhmapuuvalitsincontroller.js"></script>
 
@@ -76,6 +72,14 @@
     <script type="text/javascript" src="../common/js/loading.js"></script>
     <script type="text/javascript" src="valintakoe/valintakoe.js"></script>
     <script type="text/javascript" src="yhteisvalinnanhallinta/yhteisvalinnanhallinta.js"></script>
+
+    <!-- Oph-authorization -->
+    <script type="text/javascript" src="../common/js/Authorization/User/userModel.js"></script>
+    <script type="text/javascript" src="../common/js/Authorization/User/userAccessLevels.js"></script>
+    <script type="text/javascript" src="../common/js/Authorization/User/roleparser.js"></script>
+    <script type="text/javascript" src="../common/js/Authorization/authorization.js"></script>
+
+
 
     <!--Virkailija layout script -->
     <script type="text/javascript" src="/virkailija-raamit/apply-raamit.js"></script>
