VT-1078: testit korjattu hakemistohierarkian refaktoroinnin jällkeen

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -24,6 +24,7 @@
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="valintaperusteet-resources.js"></script>
+    <script type="text/javascript" src="myroles.js"></script>
     <script type="text/javascript" src="routes.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioUtility.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
@@ -73,11 +74,14 @@
     <script type="text/javascript" src="valintakoe/valintakoe.js"></script>
     <script type="text/javascript" src="yhteisvalinnanhallinta/yhteisvalinnanhallinta.js"></script>
 
-    <!-- Oph-authorization -->
-    <script type="text/javascript" src="../common/js/Authorization/User/userModel.js"></script>
-    <script type="text/javascript" src="../common/js/Authorization/User/userAccessLevels.js"></script>
-    <script type="text/javascript" src="../common/js/Authorization/User/roleparser.js"></script>
-    <script type="text/javascript" src="../common/js/Authorization/authorization.js"></script>
+    <!-- Authorization -->
+    <script type="text/javascript" src="../common/modules/authorization/authorization.js"></script>
+    <!-- User -->
+    <script type="text/javascript" src="../common/modules/user/userModel.js"></script>
+    <script type="text/javascript" src="../common/modules/user/userAccessLevels.js"></script>
+    <script type="text/javascript" src="../common/modules/user/roleparser.js"></script>
+
+
 
 
 
