VT-1078: käyttäjälle uusi modeli ja käyttäjätiedoille erillinen parseri

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -80,6 +80,7 @@
     <script type="text/javascript" src="../common/modules/user/userModel.js"></script>
     <script type="text/javascript" src="../common/modules/user/userAccessLevels.js"></script>
     <script type="text/javascript" src="../common/modules/user/roleparser.js"></script>
+    <script type="text/javascript" src="../common/modules/user/user.js"></script>
 
 
 
