--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -74,8 +74,12 @@
     <script type="text/javascript" src="valintakoe/valintakoe.js"></script>
     <script type="text/javascript" src="yhteisvalinnanhallinta/yhteisvalinnanhallinta.js"></script>
 
+    <!-- Lodash -->
+    <script type="text/javascript" src="../common/modules/lodash/lodash-module.js"></script>
+
     <!-- Authorization -->
     <script type="text/javascript" src="../common/modules/authorization/authorization.js"></script>
+
     <!-- User -->
     <script type="text/javascript" src="../common/modules/user/user.js"></script>
     <script type="text/javascript" src="../common/modules/user/userModel.js"></script>
